syntax = "proto3";
package Message;

message DC_Request{
    bool bGetNew = 1;
}

message DC_Respon{
    int32 strRespon = 1; //收到通知回复1
}

service DC_Notification{
     rpc DC_Notify(DC_Request)returns(DC_Respon){
     }
 }